# electionguard-kotlin-multiplatform

./: build.gradle.kts  yarn.lock.bak
hacllib/: CMakeLists.txt
hacllib/nativeInterop/: libhacl.def
src/commonMain/kotlin/electionguard/: Group.kt
src/commonTest/kotlin/electionguard/: TestUtilities.kt
src/commonTest/kotlin/electionguard/core/: DLogTest.kt  HashTest.kt
src/jsMain/kotlin/electionguard/: BigInteger.kt  DLog.kt  ElGamalBenchmark.kt  Gmp.kt  Group.kt  JsUtils.kt  Utils.kt
src/jsMain/kotlin/electionguard/core/: BigInteger.kt  DLog.kt  ElGamalBenchmark.kt  Group.kt  Utils.kt
src/jsMain/kotlin/gmpwasm/: FinalizationRegistry.kt  base64.module_gmp-wasm.kt  bindingWASM.module_gmp-wasm.kt  float.module_gmp-wasm.kt  functions.module_gmp-wasm.kt  index.module_gmp-wasm.kt  integer.module_gmp-wasm.kt  lib.es5.kt  rational.module_gmp-wasm.kt  typealiases.kt  util.module_gmp-wasm.kt
src/jsMain/kotlin/sjcl/: Helpers.kt  bitArray.kt  bn.kt  bnmodule.kt  codec.kt  index.sjcl.TypeHelpers.module_definitely-typed.kt  index.sjcl.TypeHelpers.module_sjcl.kt  index.sjcl.module_definitely-typed.kt  index.sjcl.module_sjcl.kt  lib.es2015.iterable.kt  nonDeclarations.sjcl.kt
src/jsTest/kotlin/electionguard/: TestConstants.kt
src/jsTest/kotlin/electionguard/core/: TestConstants.kt
src/jvmMain/kotlin/electionguard/: Group.kt
src/nativeMain/kotlin/electionguard/: Group.kt
